# Kavach

./: .gitattributes  .gitignore  README.md
app/: pubspec.yaml
app/android/: build.gradle.kts  gradle.properties
app/android/app/: build.gradle.kts
app/assets/model/: intent.int8.onnx  intent_ml.int8.onnx  intent_ml.labels.json
app/integration_test/: app_test.dart  asr_test.dart  engine_test.dart  guard_test.dart  live_session.dart  live_test.dart  ml_test.dart
app/lib/: data.dart  main.dart  screens.dart  store.dart  theme.dart  widgets.dart
app/lib/engine/: classifier.dart  conversation_risk.dart  fusion.dart  guardian_service.dart  kavach_engine.dart  live_listener.dart  sp_tokenizer.dart  whisper_listener.dart  (+1 more)
app/rust/kavach_core/: Cargo.toml  taxonomy.json
app/rust/kavach_core/src/: lib.rs
app/test/: conversation_risk_test.dart  data_test.dart  engine_test.dart  overflow_test.dart  widget_test.dart
core/: build_dataset.py  colab_train_augmented.py  colab_train_multilingual.py  eval_candidate.py  eval_external.py  export_onnx.py  kavach_engine.py  reference_detector.py  taxonomy.json  train_classifier.py
core/datasets/: seed_calls.jsonl  train.jsonl  val.jsonl
design_src/: decompressed.out
design_src/kavach/: README.md
docs/: AI_EVALUATION_PREP.md  ARCHITECTURE.md  DEMO_VIDEO_SCRIPT.md  DEVPOST_ABOUT_punchy.md  DEVPOST_SUBMISSION.md  EVALUATION.md  PITCH_DECK.md  PRIVACY_AND_CLASSIFICATION.md  RELEASE_PERMISSIONS.txt  UI_BRIEF.md  VIDEO_NARRATION.md  pitch_deck.html
docs/screenshots/: CAPTIONS.md
docs/voiceover/: captions_en.srt
(+25 files in other folders)
