[package]
name = "kavach_core"
version = "0.1.0"
edition = "2021"
description = "Kavach shared brain: scam-tactic risk fusion (+ tokenizer & DSP later). One source of truth for host tests and the Android JNI lib."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
